--- a/index.html
+++ b/index.html
@@ -187,7 +187,54 @@
 
     <!-- MAIN CONTENT -->
     <main class="content" role="main">
-      <!-- ... بقیه بخش‌ها بدون تغییر ... -->
+
+      <!-- Academic Background -->
+      <section id="academic" data-aos="fade-up">
+        <h2 class="section-title">Academic Background & Training</h2>
+        <div class="card" data-aos="zoom-in">
+          <ul class="clean">
+            <li><strong>Artificial Intelligence Autumn School</strong> (English-medium), Amirkabir University of Technology, Iran (2021)</li>
+            <li><strong>Resource-Aware Machine Learning</strong>, 5th International Summer School, TU Dortmund University, Germany (2020)</li>
+            <li><strong>Security of Things (SeThi 2020)</strong>, University of Rostock, Germany (2020)</li>
+            <li><strong>Lviv Data Science Summer School</strong>, Ukrainian Catholic University, Ukraine (2020)</li>
+          </ul>
+        </div>
+      </section>
+
+      <!-- Publications -->
+      <section id="publications" data-aos="fade-up">
+        <h2 class="section-title">Publications</h2>
+        <div class="card pub-card" data-aos="fade-up" data-aos-delay="40">
+          <div class="pub-item">
+            <div><b>E. Abbasifar, A. Shayan</b></div>
+            <div class="muted">The Impact of Social Network Applications on Customer Trust in Small Businesses with the Mediating Role of Brand Reputation: A Structural Equations Modeling Approach (Case Study: Modiseh Online Store). 2nd International Conference on Interdisciplinary Studies in Management & Engineering, University of Tehran, 2020.</div>
+          </div>
+        </div>
+        <div class="card pub-card" data-aos="fade-up" data-aos-delay="80">
+          <div class="pub-item">
+            <div><b>E. Abbasifar</b></div>
+            <div class="muted">New Applications of Soft Computing Technologies and Soft Data Mining in Bioinformatics: A Review. 2nd International Conference on Advances in Engineering and Basic Sciences, London, UK, 2015.</div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Research Experience -->
+      <section id="research" data-aos="fade-right">
+        <h2 class="section-title">Research Experience</h2>
+        <div class="card" data-aos="zoom-in" data-aos-delay="60">
+          <div style="font-weight:700">AI Researcher — Technology Studies Institute, Tehran, Iran (Feb – Sep 2021)</div>
+          <ul class="clean">
+            <li>Conducted a comparative analysis of global AI ecosystems, identifying and ranking sustainability-related indicators.</li>
+            <li>Collaborated with interdisciplinary scientists to integrate insights across computer science, policy, and management.</li>
+          </ul>
+        </div>
+        <div class="card" data-aos="zoom-in" data-aos-delay="100">
+          <div style="font-weight:700">Graduate Researcher (Master’s Thesis) — Payame Noor University, Tehran, Iran (2016 – 2018)</div>
+          <ul class="clean">
+            <li>Conducted research on social network analysis as part of MSc thesis.</li>
+          </ul>
+        </div>
+      </section>
 
       <!-- Certificates Section -->
       <section id="certificates" data-animate data-aos="fade-up">
@@ -211,7 +258,61 @@
         </div>
       </section>
 
-      <!-- ... Projects & Work بخش‌ها بدون تغییر ... -->
+      <!-- Projects -->
+      <section id="projects" data-aos="zoom-in">
+        <h2 class="section-title">Projects</h2>
+        <div class="card" data-aos="fade-up" data-aos-delay="60">
+          <div class="project-title">Tree-Structured Graph Classification with GNN — 2025</div>
+          <div class="project-meta">A GCN using PyTorch Geometric to classify tree graphs.</div>
+          <div class="project-link"><a href="#" target="_blank">GitHub Project Link</a></div>
+        </div>
+        <div class="card" data-aos="fade-up" data-aos-delay="100">
+          <div class="project-title">Precision in Cardiovascular Risk Prediction: A Lasso Regression Approach — ShineTech, 2023</div>
+          <div class="project-meta">A Lasso Regression model for cardiovascular risk prediction.</div>
+          <div class="project-link"><a href="#" target="_blank">GitHub Project Link</a></div>
+        </div>
+        <div class="card" data-aos="fade-up" data-aos-delay="140">
+          <div class="project-title">Advanced Prediction using Ensemble Learning Techniques — ShineTech, 2023</div>
+          <div class="project-meta">Mobile price prediction models using Decision Trees and Random Forest.</div>
+          <div class="project-link"><a href="#" target="_blank">GitHub Project Link</a></div>
+        </div>
+        <div class="card" data-aos="fade-up" data-aos-delay="180">
+          <div class="project-title">EDA Seattle Area Traffic Collision Data — Data Circles, 2020</div>
+          <div class="project-meta">During Data Circles workshop, we analyzed Seattle traffic collision data to help prioritize road improvements and prevent future collisions through Exploratory Data Analysis (EDA).</div>
+          <div class="project-link"><a href="#" target="_blank">GitHub Project Link</a></div>
+        </div>
+      </section>
+
+      <!-- Work Experience -->
+      <section id="work" data-aos="fade-right">
+        <h2 class="section-title">Work Experience</h2>
+        <div class="card" data-aos="fade-up" data-aos-delay="60">
+          <div style="font-weight:700">BPM Data Analyst — Pegah Aftab, Tehran, Iran (Apr 2021 – Present)</div>
+          <ul class="clean">
+            <li>Designed and implemented business processes and UI components using C# and React.</li>
+            <li>Analyzed workflows and authored technical documentation to support process optimization.</li>
+          </ul>
+        </div>
+        <div class="card" data-aos="fade-up" data-aos-delay="100">
+          <div style="font-weight:700">BI Developer — Pegah Aftab, Tehran, Iran (Jun – Dec 2024)</div>
+          <ul class="clean">
+            <li>Developed interactive dashboards in Power BI to visualize key performance metrics and support decision-making.</li>
+          </ul>
+        </div>
+        <div class="card" data-aos="fade-up" data-aos-delay="140">
+          <div style="font-weight:700">Data Science Intern (Python) — T25 Company, Tehran, Iran (Nov 2020 – Jan 2021)</div>
+          <ul class="clean">
+            <li>Developed Python scripts to automate data collection, processing, and analysis.</li>
+          </ul>
+        </div>
+        <div class="card" data-aos="fade-up" data-aos-delay="180">
+          <div style="font-weight:700">SQL Developer / BPM Developer — Payam Mashregh, Esfahan, Iran (2014 – 2017)</div>
+          <ul class="clean">
+            <li>Supervised a 9-member development team in optimizing processes and workflows.</li>
+            <li>Implemented SQL queries to automate workflows and support data-driven decision-making.</li>
+          </ul>
+        </div>
+      </section>
 
     </main>
   </div>
