--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Elnaz Abbasifar — Portfolio</title>
+  <title>Elnaz Abbasifar</title>
 
   <!-- AOS CSS (Animate On Scroll) -->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -264,22 +264,22 @@
         <div class="card" data-aos="fade-up" data-aos-delay="60">
           <div class="project-title">Tree-Structured Graph Classification with GNN — 2025</div>
           <div class="project-meta">A GCN using PyTorch Geometric to classify tree graphs.</div>
-          <div class="project-link"><a href="#" target="_blank">GitHub Project Link</a></div>
+          <div class="project-link"><a href="https://github.com/elnazabbasifar/GCN-Tree-Classification" target="_blank">GitHub Project Link</a></div>
         </div>
         <div class="card" data-aos="fade-up" data-aos-delay="100">
           <div class="project-title">Precision in Cardiovascular Risk Prediction: A Lasso Regression Approach — ShineTech, 2023</div>
           <div class="project-meta">A Lasso Regression model for cardiovascular risk prediction.</div>
-          <div class="project-link"><a href="#" target="_blank">GitHub Project Link</a></div>
+          <div class="project-link"><a href="https://github.com/elnazabbasifar/Heart-Disease-Prediction-using-Lasso-Regression" target="_blank">GitHub Project Link</a></div>
         </div>
         <div class="card" data-aos="fade-up" data-aos-delay="140">
           <div class="project-title">Advanced Prediction using Ensemble Learning Techniques — ShineTech, 2023</div>
           <div class="project-meta">Mobile price prediction models using Decision Trees and Random Forest.</div>
-          <div class="project-link"><a href="#" target="_blank">GitHub Project Link</a></div>
+          <div class="project-link"><a href="https://github.com/elnazabbasifar/Mobile-Price-Prediction-using-DT-and-RF?utm_source=chatgpt.com" target="_blank">GitHub Project Link</a></div>
         </div>
         <div class="card" data-aos="fade-up" data-aos-delay="180">
           <div class="project-title">EDA Seattle Area Traffic Collision Data — Data Circles, 2020</div>
           <div class="project-meta">During Data Circles workshop, we analyzed Seattle traffic collision data to help prioritize road improvements and prevent future collisions through Exploratory Data Analysis (EDA).</div>
-          <div class="project-link"><a href="#" target="_blank">GitHub Project Link</a></div>
+          <div class="project-link"><a href="https://github.com/elnazabbasifar/Traffic-Collisions-Team-Project" target="_blank">GitHub Project Link</a></div>
         </div>
       </section>
 
