--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       padding:90px 40px 60px 40px; 
       width:calc(100% - 280px);
     }
-    section{margin-bottom:34px; padding: 60px 20px;}
+    section{margin-bottom:34px}
     h2.section-title{font-size:1.1rem;color:#444444;margin:0 0 12px;font-weight:700}
     .card{
       background:var(--card-bg);
@@ -89,19 +89,9 @@
       box-shadow:0 8px 22px rgba(2,6,23,0.06);
       margin-bottom:12px;
     }
-    section + section {
-      border-top: 1px solid #e5e7eb;
-      margin-top: 40px;
-    }
-    .section-title {
-      color: #2d3748;
-      margin-bottom: 20px;
-      font-weight: 600;
-    }
     .muted{color:var(--muted);font-size:0.95rem}
     ul.clean{margin:10px 0 0 0; padding-left:1.1rem}
     ul.clean li{margin:8px 0;line-height:1.5;color:var(--text);font-size:0.98rem}
-    ul.clean {line-height: 1.6;}
 
     /* Publications */
     .pub-card { margin-bottom:12px; }
